--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1118,6 +1118,30 @@ changequote([,])dnl
 		install_headers_dir=install-headers-cpio
 		use_collect2=yes
 		;;
+	hppa*64*-*-hpux11*)
+		target_cpu_default="MASK_PA_11"
+		xm_file=pa/xm-pa64hpux.h
+		xmake_file=pa/x-pa-hpux
+		tmake_file=pa/t-pa
+		tm_file="pa/pa64-start.h ${tm_file} pa/pa64-regs.h pa/long_double.h pa/elf.h pa/pa-hpux.h pa/pa-hpux11.h pa/pa-64.h"
+		float_format=i128
+		tmake_file=pa/t-pa64
+		target_cpu_default="(MASK_PA_11|MASK_PA_20)"
+
+		if [[ x$gas = xyes ]]
+		then
+			tm_file="${tm_file} pa/pa-gas.h"
+		fi
+#		if [[ x$enable_threads = x ]]; then
+#		    enable_threads=$have_pthread_h
+#		fi
+# 		if [[ x$enable_threads = xyes ]]; then
+#			thread_file='dce'
+#			tmake_file="${tmake_file} pa/t-dce-thr"
+#		fi
+		install_headers_dir=install-headers-cpio
+		use_collect2=yes
+		;;
 	hppa1.1-*-hpux11* | hppa2*-*-hpux11*)
 		target_cpu_default="MASK_PA_11"
 		tm_file="${tm_file} pa/pa32-regs.h pa/long_double.h pa/som.h pa/pa-hpux.h pa/pa-hpux11.h"
