Private spelling of autogen :-}
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33846 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/fixinc/Makefile.in
+++ b/gcc/fixinc/Makefile.in
@@ -116,7 +116,7 @@ Makefile: Makefile.in ../config.status
 	  $(SHELL) ./config.status
 
 check : fixincl
-	autogen4 -T $(srcdir)/check.tpl $(srcdir)/inclhack.def
+	autogen -T $(srcdir)/check.tpl $(srcdir)/inclhack.def
 	$(SHELL) ./check.sh
 	@echo ; echo "diff of diffs:"
 	@if diff testdir/NEWDIFF $(srcdir)/check.diff ; \
