--- a/configure.in
+++ b/configure.in
@@ -1018,6 +1018,9 @@ if [ x${shared} = xyes ]; then
     i[3456]86-*)
       target_makefile_frag="${target_makefile_frag} config/mt-x86pic"
       ;;
+    powerpc*-*-aix*)
+      # We don't want -fPIC on AIX.
+      ;;
     powerpc*-*)
       target_makefile_frag="${target_makefile_frag} config/mt-ppcpic"
       ;;
