--- a/gcc/mklibgcc.in
+++ b/gcc/mklibgcc.in
@@ -106,9 +106,9 @@ case X"$LIBGCC1" in
 
       echo $out: $libgcc1_c_dep
       if [ -z "@NO_MINUS_C_MINUS_O@" ]; then
-	echo "	$oldcc_compile" $flags -c '$(srcdir)/libgcc1.c' -o $out
+	echo "	$oldcc_compile" -DL$name $flags -c '$(srcdir)/libgcc1.c' -o $out
       else
-	echo "	$oldcc_compile" $flags -c '$(srcdir)/libgcc1.c'
+	echo "	$oldcc_compile" -DL$name $flags -c '$(srcdir)/libgcc1.c'
 	echo "	mv libgcc1${objext} $out"
       fi
 
