* configure.in (NO_MINUS_C_MINUS_O): Macro made availabe for AC_OUTPUT         files.         * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33971 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -322,6 +322,9 @@ AC_CANONICAL_SYSTEM
 # Find the native compiler
 AC_PROG_CC
 AC_PROG_CC_C_O
+if test $ac_cv_prog_cc_cc_c_o = no; then
+  NO_MINUS_C_MINUS_O=yes
+fi
 AC_SUBST(NO_MINUS_C_MINUS_O)
 
 gcc_AC_C_LONG_DOUBLE
