* configure.in (hppa*64*-*-*): Do build ld for this configuration.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33987 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -653,7 +653,9 @@ case "${target}" in
     noconfigdirs="$noconfigdirs target-libg++ ${libstdcxx_version} target-librx target-libgloss target-libffi"
     ;;
   hppa*-*-*elf* | \
-  hppa*-*-lites*)
+  hppa*-*-linux-gnu* | \
+  hppa*-*-lites* | \
+  hppa*64*-*-*)
     # Do configure ld/binutils/gas for this case.
     ;;
   hppa*-*-*)
