* configure.in (*-pc-msdosdjgpp): Set float_format to none.         * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34004 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1553,6 +1553,7 @@ changequote([,])dnl
 		gnu_ld=yes
 		gas=yes
 		exeext=.exe
+		float_format=none
 		case $host in *pc-msdosdjgpp*)
 			target_alias=djgpp
 			;;
