--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -191,7 +191,7 @@ cplib2.txt: $(CXX_LIB2SRCS) $(CXX_EXTRA_HEADERS) cplib2.ready
 # Don't try to do write if `.' is not writable;
 # in that case, we're installing from someone else's directory.
 # But go ahead and fail if that directory hasn't been properly built.
-cplib2.ready: $(GCC_PASSES) stmp-int-hdrs $(STMP_FIXPROTO)
+cplib2.ready: $(GCC_PASSES) stmp-int-hdrs $(STMP_FIXPROTO) cc1plus$(exeext)
 	@if [ -r cplib2.txt -a -w . ]; then \
 	  case " $(LANGUAGES) " in \
 	  *" "[cC]"++ "*) \
