* Makefile.in (libgcc.mk): Depend on xgcc$(exeext) for GCC_FOR_TARGET used by MULTILIBS. * mklibgcc.in: Make sure each .o file depends on the directory it will be in. Make the multilib directory depends libgcc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34048 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -953,7 +953,7 @@ libgcc2.ready: $(GCC_PASSES) stmp-int-hdrs $(STMP_FIXPROTO)
 
 LIB2ADD = $(srcdir)/frame.c $(LIB2FUNCS_EXTRA) $(LANG_LIB2FUNCS)
 
-libgcc.mk: config.status Makefile mklibgcc $(LIB2ADD)
+libgcc.mk: config.status Makefile mklibgcc $(LIB2ADD) xgcc$(exeext)
 	objext='$(objext)' \
 	OLDCC='$(OLDCC)' \
 	LIBGCC1='$(LIBGCC1)' \
