* mklibgcc.in: Restore rule to create ${dir}.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34049 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/mklibgcc.in
+++ b/gcc/mklibgcc.in
@@ -310,6 +310,8 @@ for ml in $MULTILIBS; do
   dir=`echo ${ml} | sed -e 's/;.*$//' -e 's/=/$(EQ)/g'`
   if [ $dir != . ]; then
     echo "libgcc/${dir}: libgcc; -mkdir libgcc/${dir}"
+    echo "${dir}:; -mkdir ${dir}"
+    all="$all ${dir} libgcc/${dir}"
   fi
   all="$all ${dir}/libgcc.a"
 done
