* Makefile.in: Rebuilt. 	* Makefile.am (hack1): Removed. 	(awto_files): Likewise. 	(libgcjawt_la_SOURCES): Likewise. 	(EXTRA_libgcjawt_la_SOURCES): Likewise. 	(libgcjawt_la_DEPENDENCIES): Likewise. 	(libgcjawt_la_LIBADD): Likewise. 	(libgcjawt_la_LDFLAGS): Likewise. 	(libgcjawt_la_LINK): Likewise. 	($(awt_java_source_files:.java=.class)): Likewise. 	(libgcj.zip): Don't depend on AWT files. 	(MOSTLYCLEANFILES): Don't include AWT files. 	($(awto_files)): Removed. 	(nat_headers): Removed AWT files. 	(cond_awt_java_source_files): Removed. 	(ordinary_java_source_files): Added awt_java_source_files. 	* libgcj.spec.in (*lib): Removed -lgcjawt. 	* configure: Rebuilt. 	* configure.in: Removed --enable-java-awt option.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34058 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -23,11 +23,7 @@ toolexecdir = $(exec_prefix)/$(target_alias)
 toolexeclibdir = $(toolexecdir)/lib$(MULTISUBDIR)
 endif
 
-## Some versions of automake can't handle a conditional _LTLIBRARIES.
-if AWT
-hack1 = libgcjawt.la
-endif
-toolexeclib_LTLIBRARIES = libgcj.la $(hack1)
+toolexeclib_LTLIBRARIES = libgcj.la
 toolexeclib_DATA = libgcj.spec
 data_DATA = libgcj.zip
 
@@ -119,8 +115,6 @@ c_files = $(c_source_files:.c=.lo)
 javao_files = $(java_source_files:.java=.lo) \
 	$(built_java_source_files:.java=.lo)
 
-awto_files = $(awt_java_source_files:.java=.lo)
-
 ## Extract the libffi object file names.
 libffi_files = `$(AR) t ../libffi/.libs/libffi.a 2>/dev/null | sed 's/\.o/\.lo/g' | sed 's/^/..\/libffi\//g'`
 
@@ -138,15 +132,6 @@ libgcj_la_LDFLAGS = -rpath $(toolexeclibdir) \
 libgcj_la_LINK = $(LIBLINK)
 
 
-libgcjawt_la_SOURCES = ## Nothing
-EXTRA_libgcjawt_la_SOURCES = $(awt_java_source_files)
-libgcjawt_la_DEPENDENCIES = libgcj.zip $(awto_files)
-libgcjawt_la_LIBADD = $(awto_files)
-libgcjawt_la_LDFLAGS = -rpath $(toolexeclibdir) \
-## The mysterious backslash is consumed by make.
-	-version-info `grep -v '^\#' $(srcdir)/libtool-version`
-libgcjawt_la_LINK = $(LIBLINK)
-
 ## Make the .class files depend on the .zip file.  This seems
 ## backwards, but is right.  This doesn't catch all the .class files,
 ## but that is ok, because the ones it fails to pick up are defined in
@@ -154,7 +139,6 @@ libgcjawt_la_LINK = $(LIBLINK)
 ## only want to create headers for those files which do not have
 ## hand-maintained headers.
 $(java_source_files:.java=.class): libgcj.zip
-$(awt_java_source_files:.java=.class): libgcj.zip
 
 ## FIXME: this isn't really correct.
 $(built_java_source_files:.java=.class): $(built_java_source_files)
@@ -170,7 +154,7 @@ $(built_java_source_files:.java=.class): $(built_java_source_files)
 ## up-to-date, and foo.class is removed, and bar.java is touched, then
 ## `make libgcj.zip' will not rebuilt foo.class.  That's because
 ## libgcj.zip is not out-of-date with respect to foo.java.
-libgcj.zip: $(java_source_files) $(cond_awt_java_source_files)
+libgcj.zip: $(java_source_files)
 ## FIXME: this ought to depend on built_java_source_files, but right
 ## now it can't.  Ugly.
 	$(MAKE) $(built_java_source_files:.java=.class)
@@ -183,8 +167,7 @@ libgcj.zip: $(java_source_files) $(cond_awt_java_source_files)
 ## Note that we explicitly want to include directory information.
 	$(ZIP) -r libgcj java gnu -n .class -i '*.class' -i '*/'
 
-MOSTLYCLEANFILES = $(javao_files) $(nat_files) $(nat_headers) $(c_files) \
-	$(awto_files)
+MOSTLYCLEANFILES = $(javao_files) $(nat_files) $(nat_headers) $(c_files)
 CLEANFILES = libgcj.zip
 
 clean-local:
@@ -216,10 +199,10 @@ $(c_files): %.lo: %.c
 $(c_files): java/lang/fdlibm.h java/lang/ieeefp.h java/lang/mprec.h
 
 ## FIXME: GNU make.
-$(awto_files) $(javao_files): %.lo: %.java
+$(javao_files): %.lo: %.java
 	$(GCJCOMPILE) -o $@ $<
 
-$(awto_files) $(javao_files): libgcj.zip
+$(javao_files): libgcj.zip
 
 ## ################################################################
 
@@ -234,7 +217,6 @@ $(awto_files) $(javao_files): libgcj.zip
 ## Header files used when compiling some of the nat* files.
 nat_headers = $(ordinary_java_source_files:.java=.h) \
 	$(built_java_source_files:.java=.h) \
-	$(cond_awt_java_source_files:.java=.h) \
 	java/io/ObjectOutputStream$$PutField.h \
 	java/io/ObjectInputStream$$GetField.h
 
@@ -579,21 +561,17 @@ java/awt/ActiveEvent.java \
 java/awt/Rectangle.java	\
 java/awt/IllegalComponentStateException.java
 
-if AWT
-cond_awt_java_source_files = $(awt_java_source_files)
-else
-cond_awt_java_source_files =
-endif
-
 ## Java files which are created by configure and thus are in the build
 ## directory.
 built_java_source_files = java/lang/ConcreteProcess.java
 
 ## List of all .java files to be compiled.  Please keep this list
 ## alphabetical.  Please put files from gnu/gcj/convert into
-## convert_source_files.  If the .java file has a hand-maintained
+## convert_source_files and files from java/awt into
+## awt_java_source_files.  If the .java file has a hand-maintained
 ## header, please list it in special_java_source_files.
 ordinary_java_source_files =  $(convert_source_files) \
+$(awt_java_source_files) \
 gnu/gcj/protocol/http/Connection.java \
 gnu/gcj/protocol/http/Handler.java \
 gnu/gcj/protocol/file/Connection.java \
