--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -126,9 +126,7 @@ AUTOMAKE_OPTIONS = foreign no-installinfo
 @USE_LIBDIR_FALSE@toolexecdir = \
 @USE_LIBDIR_FALSE@$(exec_prefix)/$(target_alias)
 
-@AWT_TRUE@hack1 = \
-@AWT_TRUE@libgcjawt.la
-toolexeclib_LTLIBRARIES = libgcj.la $(hack1)
+toolexeclib_LTLIBRARIES = libgcj.la
 toolexeclib_DATA = libgcj.spec
 data_DATA = libgcj.zip
 
@@ -193,8 +191,6 @@ javao_files = $(java_source_files:.java=.lo) \
 	$(built_java_source_files:.java=.lo)
 
 
-awto_files = $(awt_java_source_files:.java=.lo)
-
 libffi_files = `$(AR) t ../libffi/.libs/libffi.a 2>/dev/null | sed 's/\.o/\.lo/g' | sed 's/^/..\/libffi\//g'`
 
 libgcj_la_SOURCES = prims.cc jni.cc exception.cc \
@@ -214,25 +210,13 @@ libgcj_la_LDFLAGS = -rpath $(toolexeclibdir) \
 
 libgcj_la_LINK = $(LIBLINK)
 
-libgcjawt_la_SOURCES = ## Nothing
-EXTRA_libgcjawt_la_SOURCES = $(awt_java_source_files)
-libgcjawt_la_DEPENDENCIES = libgcj.zip $(awto_files)
-libgcjawt_la_LIBADD = $(awto_files)
-libgcjawt_la_LDFLAGS = -rpath $(toolexeclibdir) \
-	-version-info `grep -v '^\#' $(srcdir)/libtool-version`
-
-libgcjawt_la_LINK = $(LIBLINK)
-
-MOSTLYCLEANFILES = $(javao_files) $(nat_files) $(nat_headers) $(c_files) \
-	$(awto_files)
-
+MOSTLYCLEANFILES = $(javao_files) $(nat_files) $(nat_headers) $(c_files)
 CLEANFILES = libgcj.zip
 
 SUFFIXES = .class .java .h
 
 nat_headers = $(ordinary_java_source_files:.java=.h) \
 	$(built_java_source_files:.java=.h) \
-	$(cond_awt_java_source_files:.java=.h) \
 	java/io/ObjectOutputStream$$PutField.h \
 	java/io/ObjectInputStream$$GetField.h
 
@@ -373,13 +357,11 @@ java/awt/ActiveEvent.java \
 java/awt/Rectangle.java	\
 java/awt/IllegalComponentStateException.java
 
-@AWT_TRUE@cond_awt_java_source_files = \
-@AWT_TRUE@$(awt_java_source_files)
-@AWT_FALSE@cond_awt_java_source_files = \
 
 built_java_source_files = java/lang/ConcreteProcess.java
 
 ordinary_java_source_files = $(convert_source_files) \
+$(awt_java_source_files) \
 gnu/gcj/protocol/http/Connection.java \
 gnu/gcj/protocol/http/Handler.java \
 gnu/gcj/protocol/file/Connection.java \
@@ -914,7 +896,6 @@ LTLIBRARIES =  $(toolexeclib_LTLIBRARIES)
 
 libgcj_la_OBJECTS =  prims.lo jni.lo exception.lo resolve.lo \
 defineclass.lo interpret.lo name-finder.lo
-libgcjawt_la_OBJECTS = 
 @NATIVE_TRUE@bin_PROGRAMS =  jv-convert$(EXEEXT) gij$(EXEEXT)
 @NATIVE_TRUE@@MAINTAINER_MODE_TRUE@noinst_PROGRAMS =  \
 @NATIVE_TRUE@@MAINTAINER_MODE_TRUE@gen-from-JIS$(EXEEXT)
@@ -1307,8 +1288,8 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/java/util/zip/ZipOutputStream.P .deps/jni.P .deps/libgcjdata.P \
 .deps/name-finder.P .deps/no-threads.P .deps/nogc.P \
 .deps/posix-threads.P .deps/prims.P .deps/resolve.P
-SOURCES = $(libgcjdata_a_SOURCES) $(libgcj_la_SOURCES) $(EXTRA_libgcj_la_SOURCES) $(libgcjawt_la_SOURCES) $(EXTRA_libgcjawt_la_SOURCES) $(jv_convert_SOURCES) $(EXTRA_jv_convert_SOURCES) $(gij_SOURCES) $(gen_from_JIS_SOURCES) $(EXTRA_gen_from_JIS_SOURCES)
-OBJECTS = $(libgcjdata_a_OBJECTS) $(libgcj_la_OBJECTS) $(libgcjawt_la_OBJECTS) $(jv_convert_OBJECTS) $(gij_OBJECTS) $(gen_from_JIS_OBJECTS)
+SOURCES = $(libgcjdata_a_SOURCES) $(libgcj_la_SOURCES) $(EXTRA_libgcj_la_SOURCES) $(jv_convert_SOURCES) $(EXTRA_jv_convert_SOURCES) $(gij_SOURCES) $(gen_from_JIS_SOURCES) $(EXTRA_gen_from_JIS_SOURCES)
+OBJECTS = $(libgcjdata_a_OBJECTS) $(libgcj_la_OBJECTS) $(jv_convert_OBJECTS) $(gij_OBJECTS) $(gen_from_JIS_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
@@ -1456,9 +1437,6 @@ uninstall-toolexeclibLTLIBRARIES:
 
 libgcj.la: $(libgcj_la_OBJECTS) $(libgcj_la_DEPENDENCIES)
 	$(libgcj_la_LINK) -rpath $(toolexeclibdir) $(libgcj_la_LDFLAGS) $(libgcj_la_OBJECTS) $(libgcj_la_LIBADD) $(LIBS)
-
-libgcjawt.la: $(libgcjawt_la_OBJECTS) $(libgcjawt_la_DEPENDENCIES)
-	$(libgcjawt_la_LINK) -rpath $(toolexeclibdir) $(libgcjawt_la_LDFLAGS) $(libgcjawt_la_OBJECTS) $(libgcjawt_la_LIBADD) $(LIBS)
 
 mostlyclean-binPROGRAMS:
 
@@ -1892,14 +1870,13 @@ mostlyclean distclean maintainer-clean
 
 
 $(java_source_files:.java=.class): libgcj.zip
-$(awt_java_source_files:.java=.class): libgcj.zip
 
 $(built_java_source_files:.java=.class): $(built_java_source_files)
 	javac="$(JAVAC)"; \
 	$$javac -L$(here) $(JCFLAGS) -classpath $(here):`cd $(srcdir) && /bin/pwd` \
 	  -d $(here) $?
 
-libgcj.zip: $(java_source_files) $(cond_awt_java_source_files)
+libgcj.zip: $(java_source_files)
 	$(MAKE) $(built_java_source_files:.java=.class)
 	javac="$(JAVAC)"; cd $(srcdir); \
 	  $$javac $(JCFLAGS) -classpath $(here):`/bin/pwd` -d $(here) \
@@ -1927,10 +1904,10 @@ $(c_files): %.lo: %.c
 
 $(c_files): java/lang/fdlibm.h java/lang/ieeefp.h java/lang/mprec.h
 
-$(awto_files) $(javao_files): %.lo: %.java
+$(javao_files): %.lo: %.java
 	$(GCJCOMPILE) -o $@ $<
 
-$(awto_files) $(javao_files): libgcj.zip
+$(javao_files): libgcj.zip
 
 .class.h:
 	$(GCJH) -classpath $(top_builddir) $(basename $<)
