--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -479,14 +479,14 @@ AC_FUNC_MMAP_FILE
 # We will need to find libiberty.h and ansidecl.h
 saved_CFLAGS="$CFLAGS"
 CFLAGS="$CFLAGS -I${srcdir} -I${srcdir}/../include"
-gcc_AC_NEED_DECLARATIONS(bcopy bzero bcmp \
+gcc_AC_CHECK_DECLS(bcopy bzero bcmp \
 	index rindex getenv atol sbrk abort atof getcwd getwd \
 	strsignal putc_unlocked fputs_unlocked strstr environ \
-	malloc realloc calloc free, [
+	malloc realloc calloc free basename getopt, , ,[
 #include "gansidecl.h"
 #include "system.h"])
 
-gcc_AC_NEED_DECLARATIONS(getrlimit setrlimit getrusage, [
+gcc_AC_CHECK_DECLS(getrlimit setrlimit getrusage, , ,[
 #include "gansidecl.h"
 #include "system.h"
 #ifdef HAVE_SYS_RESOURCE_H
