Remove compile time warnings when building arm.o
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34114 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -566,6 +566,9 @@ for machine in $build $host $target; do
 	alpha*-*-*)
 		cpu_type=alpha
 		;;
+	strongarm*-*-*)
+		cpu_type=arm
+		;;
 	arm*-*-*)
 		cpu_type=arm
 		;;
