* configure.in:  For --enable-languages=LIST, check for empty LIST.         * configure:  Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34123 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -4607,6 +4607,10 @@ if test x"${enable_languages+set}" != xset; then
 	else
 		enable_languages=all
 	fi
+else
+	if test x"${enable_languages}" = x; then
+		AC_MSG_ERROR([--enable-languages needs at least one argument])
+	fi
 fi
 subdirs=
 for lang in ${srcdir}/*/config-lang.in ..
